Poprawa parsera PDF, integracja z modelami i widokami, nowy podgląd ról z syntezatorem mowy(ale jeszcze nie działa syntezator, pasek postępu i podświetlenia, naprawa szablonów, url i obsługi repozytorium, nowe szablony, dodane widoki,nowe modele, nowy utils.py i forms.py

--- a/scripts/templates/scripts/add_character.html
+++ b/scripts/templates/scripts/add_character.html
@@ -1,8 +1,8 @@
 {% extends 'scripts/base.html' %}
-{% block title %}Dodaj scenariusz{% endblock %}
+{% block title %}Dodaj postać{% endblock %}
 {% block content %}
-<h2>Dodaj nowy scenariusz</h2>
-<form method="post" enctype="multipart/form-data">
+<h2>Dodaj nową postać</h2>
+<form method="post">
     {% csrf_token %}
     {% if form.errors %}
         <ul style="color: red;">
@@ -11,12 +11,10 @@
                     <li><strong>{{ field.label }}:</strong> {{ error }}</li>
                 {% endfor %}
             {% endfor %}
-            {% for error in form.non_field_errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
         </ul>
     {% endif %}
     {{ form.as_p }}
     <button type="submit" class="btn">Zapisz</button>
 </form>
+<p><a href="{% url 'dashboard' %}">← Powrót</a></p>
 {% endblock %}
