--- a/scripts/templates/scripts/register.html
+++ b/scripts/templates/scripts/register.html
@@ -1,15 +1,12 @@
 {% extends 'scripts/base.html' %}
 {% block title %}Rejestracja{% endblock %}
 {% block content %}
-
 <h2>Zarejestruj się</h2>
-
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Zarejestruj</button>
+    <button type="submit" class="btn">Zarejestruj</button>
 </form>
-
 <p>Masz już konto? <a href="{% url 'login' %}">Zaloguj się</a></p>
-
 {% endblock %}
+
